# distringo

./: .gitattributes  .gitignore  .grcov.yml  Cargo.toml  config.yml.sample  renovate.json5
.github/: dependabot.yml
.github/workflows/: test.yml
client/: .eslintrc.yml  .gitignore  api.ts  db.test.ts  db.ts  index.html  index.ts  index.tsx  package-lock.json  package.json  tsconfig.json  webpack.config.js
client/css/: index.css
contrib/: fetch.py  mirror.sh
distringo/: Cargo.toml
distringo-census/: Cargo.toml
distringo-census-datalink/: Cargo.toml
distringo-census-datalink/examples/: recursive-directory-list-poc.rs
distringo-census-datalink/src/: lib.rs  us_census.rs
distringo-census-dataset/: Cargo.toml
distringo-census-dataset/src/: lib.rs  schema.rs
distringo-census/src/: lib.rs
distringo-fetch/: Cargo.toml
distringo-fetch/src/: lib.rs  main.rs  repl.rs
distringo-fetch/src/repl/: command.rs  mode.rs
distringo-server/: Cargo.toml
distringo-server/src/: main.rs  server.rs  settings.rs
distringo-server/src/server/: routes.rs
distringo-server/src/server/routes/: shapefiles.rs
distringo-server/src/settings/: server.rs
distringo-shapefile/: Cargo.toml
distringo-vfs/: Cargo.toml
distringo-vfs/examples/vfs-plain/: main.rs
distringo-vfs/src/: lib.rs
distringo-viewer/: .gitignore  index.html  main.js  package-lock.json  package.json  preload.js
distringo-viewer/app/: main.js
distringo-web/: Cargo.toml
distringo-web/src/: main.rs
distringo/src/: config.rs  error.rs  id.rs  lib.rs
distringo/src/id/: geoid.rs  interned.rs  interner.rs  raw.rs
distringo/src/server/routes/: shapefiles.rs
palapelify/: Cargo.toml
palapelify/src/: feature_id.rs  geoid.rs  geometry_interner.rs  interned_id.rs  lib.rs  main.rs  point.rs
schemas/2010/: pl94_171.yaml
server/: Cargo.toml
src/: config.rs  error.rs  lib.rs  main.rs  server.rs
src/census2020/: pl94_171.rs
src/server/: routes.rs
src/server/routes/: api.rs  shapefiles.rs
src/server/routes/api/: shapefiles.rs
tests/: load_2010.rs  load_2020.rs
