[package]
name = "distringo"
publish = false
version = "0.1.0"
authors = ["Kristofer Rye <kristofer.rye@gmail.com>"]
license = "MIT"
edition = "2021"


[dependencies]
# General data structures
fnv = "1.0.7"
lazy_static = "1.4.0"
once_cell = "1.8.0"

# Interoperability
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
serde_yaml = "0.8.23"

# Project-specific data structures and dependencies
csv = "1.1.6"
geo = "0.18.0"
geojson = "0.22.2"
regex = "1.5.4"
semver = "1.0.4"

# Runtime
config = { version = "0.11.0", default_features = false, features = ["json", "yaml"] }
futures = "0.3"
log = "0.4.14"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.8", default_features = false }
tracing = "0.1.30"
tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }
pretty_env_logger = "0.4.0"

# Web server dependencies
axum = "0.4.4"
http = "0.2.6"
hyper = "0.14.16"
tower = { version = "0.4.11", features = ["util", "timeout"] }
tower-http = { version = "0.2.1", features = ["add-extension", "trace"] }


[dev-dependencies]
simple_logger = "2.1.0"


[workspace]
members = [
	"palapelify",
]
