[package]
name = "distringo"
publish = false
version = "0.1.0"
authors = ["Kristofer Rye <kristofer.rye@gmail.com>"]
license = "MIT"
edition = "2021"


[dependencies]
# General data structures
fnv = "1.0.7"
lazy_static = "1.4.0"
once_cell = "1.10.0"

# Interoperability
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8.24"

# Project-specific data structures and dependencies
csv = "1.1.6"
geo = "0.20.1"
geojson = "0.22.3"
regex = "1.5.5"
semver = "1.0.9"

# Runtime
config = { version = "0.13.1", default_features = false, features = ["json", "yaml"] }
futures = "0.3"
log = "0.4.17"
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.8", default_features = false }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
pretty_env_logger = "0.4.0"

# Web server dependencies
axum = "0.5.6"
http = "0.2.7"
hyper = "0.14.18"
tower = { version = "0.4.11", features = ["util", "timeout"] }
tower-http = { version = "0.3.2", features = ["add-extension", "fs", "trace"] }


[dev-dependencies]
simple_logger = "2.1.0"


[workspace]
members = [
	"palapelify",
]
