[package]
name = "distringo-fetch"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.19"
reqwest = "0.11.18"
suppaftp = "5.1.2"
tokio = { version = "1.29.1", features = ["macros", "rt", "rt-multi-thread", "tracing", "io-std"] }
tracing = "0.1.38"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "tracing-log"] }
