[package]
name = "distringo-server"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
# General data structures
fnv = "1.0.7"
lazy_static = "1.4.0"
once_cell = "1.13.0"

# Interoperability
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.9.17"

# Project-specific data structures and dependencies
csv = "1.1.6"
geo = "0.23.0"
geojson = "0.24.0"
regex = "1.7.0"
semver = "1.0.9"

# Runtime
config = { version = "0.13.1", default_features = false, features = ["json", "yaml"] }
futures = "0.3"
log = "0.4.17"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.9", default_features = false }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
pretty_env_logger = "0.4.0"

# Web server dependencies
axum = "0.6.4"
http = "0.2.7"
hyper = "0.14.20"
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.3.3", features = ["add-extension", "fs", "trace"] }


[dev-dependencies]
simple_logger = "4.0.0"
