[package]
name = "distringo-server"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
# General data structures
fnv = "1.0.7"
lazy_static = "1.4.0"
once_cell = "1.17.1"

# Interoperability
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"

# Project-specific data structures and dependencies
csv = "1.2.0"
geo = "0.23.1"
geojson = "0.24.0"
regex = "1.7.1"
semver = "1.0.16"

# Runtime
config = { version = "0.13.3", default_features = false, features = ["json", "yaml"] }
futures = "0.3"
log = "0.4.17"
thiserror = "1.0.38"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.12", default_features = false }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
pretty_env_logger = "0.4.0"

# Web server dependencies
axum = "0.6.10"
http = "0.2.9"
hyper = "0.14.24"
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.4.0", features = ["add-extension", "fs", "trace"] }


[dev-dependencies]
simple_logger = "4.0.0"
