[package]
name = "distringo"
publish = false
version = "0.1.0"
authors = ["Kristofer Rye <kristofer.rye@gmail.com>"]
license = "MIT"
edition = "2021"


[dependencies]
# General data structures
fnv = "1.0.7"
lazy_static = "1.4.0"
once_cell = "1.13.0"

# Interoperability
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.9.4"

# Project-specific data structures and dependencies
csv = "1.1.6"
geo = "0.22.1"
geojson = "0.23.0"
regex = "1.6.0"
semver = "1.0.9"

# Runtime
config = { version = "0.13.1", default_features = false, features = ["json", "yaml"] }
log = "0.4.17"
thiserror = "1.0.31"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
pretty_env_logger = "0.4.0"

[dev-dependencies]
simple_logger = "2.2.0"
