[package]
name = "distringo"
publish = false
version = "0.1.0"
authors = ["Kristofer Rye <kristofer.rye@gmail.com>"]
license = "MIT"
edition = "2021"


[dependencies]
# General data structures
fnv = "1.0.7"
lazy_static = "1.4.0"
once_cell = "1.17.1"

# Interoperability
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"

# Project-specific data structures and dependencies
csv = "1.2.1"
geo = "0.24.1"
geojson = "0.24.0"
regex = "1.7.3"
semver = "1.0.17"

# Runtime
config = { version = "0.13.3", default_features = false, features = ["json", "yaml"] }
log = "0.4.17"
thiserror = "1.0.39"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
pretty_env_logger = "0.4.0"

[dev-dependencies]
simple_logger = "4.0.0"
